--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
-@import url('https://katergamingde.github.io/Katerhub-managment/main/katerhub/web-assets/theme.css');
-@import url('https://katergamingde.github.io/Katerhub-managment/main/katerhub/web-assets/format.css');
+@import url('https://KaterHub.github.io/main/assets/theme.css');
+@import url('https://KaterHub.github.io/main/assets/format.css');
 
 *{
     margin: 0;
@@ -12,7 +12,7 @@ html {
 }
 
 body { 
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(https://katergamingde.github.io/Katerhub-managment/katerhub/web-assets/MedicalTanEft-max-1mb.gif);
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(https://KaterHub.github.io/main/background.gif);
     background-size: cover;
     background-position: center;
 }
