--- a/assets/style.css
+++ b/assets/style.css
@@ -354,16 +354,16 @@ pre {
     /* Create the gradient. */
      background-image: linear-gradient(
           45deg,
-          #ee898c 16.666%, 
-          #E16541 16.666%, 
-          #E16541 33.333%, 
-          #F18F43 33.333%, 
-          #f26ad9 50%, 
-          #cf8bf1 50%, 
-          #8B9862 66.666%, 
-          #476098 66.666%, 
-          #476098 83.333%, 
-          #A7489B 83.333%);
+          #0088ff 16.666%, 
+          #004cff 16.666%, 
+          #2b00ff 33.333%, 
+          #6a00ff 33.333%, 
+          #b300ff 50%, 
+          #f200ff 50%, 
+          #ff00d0 66.666%, 
+          #ff008c 66.666%, 
+          #ff003c 83.333%, 
+          #ff002b 83.333%);
     
     /* Set the background size and repeat properties. */
     background-size: 100%;
