--- a/assets/style.css
+++ b/assets/style.css
@@ -354,16 +354,16 @@ pre {
     /* Create the gradient. */
      background-image: linear-gradient(
           45deg,
-          #7429ff 16.666%, 
-          #bb00ff 16.666%, 
-          #d900ff 33.333%, 
-          #ff00f7 33.333%, 
-          #8c00ff 50%, 
-          #5500ff 50%, 
-          #2600ff 66.666%, 
-          #0040ff 66.666%, 
-          #6e4aff 83.333%, 
-          #957aff 83.333%);
+          #ffffff 16.666%, 
+          #ffffff 16.666%, 
+          #ffffff 33.333%, 
+          #ffffff 33.333%, 
+          #ffffff 50%, 
+          #ffffff 50%, 
+          #ffffff 66.666%, 
+          #ffffff 66.666%, 
+          #ffffff 83.333%, 
+          #ffffff 83.333%);
     
     /* Set the background size and repeat properties. */
     background-size: 100%;
